maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:5: error: ')' expected but ',' found.
for (x<-0 to Xmax, y<-0 to Ymax) {
                 ^JediEscaper:10: error: illegal start of simple expression
}
^