maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
val Xmax=getMondeLargeur-1
val Ymax=getMondeHauteur-1
for (x<-0 to Xmax, y<-0 to Ymax) {
	if(aBiscuit(x,y)==true) {
		setIndication(x,y,0)
	}
}
}
